--- a/web/package.json
+++ b/web/package.json
@@ -11,10 +11,10 @@
   "dependencies": {
     "axios": "^1.1.2",
     "clsx": "^1.2.1",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.4.1",
-    "swiper": "^8.4.2"
+    "react-router-dom": "^6.4.1"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
