--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.4.1"
   },
   "devDependencies": {
