--- a/web/package.json
+++ b/web/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "axios": "^1.1.2",
     "clsx": "^1.2.1",
+    "draft-js": "^0.11.7",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.4.1"
   },
@@ -22,6 +24,7 @@
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@types/react-draft-wysiwyg": "^1.13.4",
     "@vitejs/plugin-react": "^2.1.0",
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.17",
